some styles and classes update

--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
 :root {
   --dark: #1b1a1d;
   --white: #d6d2cf;
-  --accent: #5b6786;
-  --active: #fd5982;
+  --accent: #865b82;
+  --active: #e1aaff;
   --bg: #afafaf;
   --dark-rgb: 27, 26, 29;
   --white-rgb: 214, 210, 207;
