--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -14,3 +14,13 @@
   font-size: clamp(1rem, 4vw, 6rem);
   opacity: 0.2;
 }
+
+body > canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100px;
+  height: 100px;
+  pointer-events: none;
+}
